Impl missing controller methods, refactor
* implement/improve/refactor NoteController methods
* change CommandLineRunner logic to create only admin user
* fix NoteDTO not returning createdAt, updatedAt in json
* NoteRepository: add 2 new methods
* UserRepository: add 1 new method
* NoteService, userService (and their impl): delete operations now return boolean, improve updateEntityFromDTO methods
* NoteServiceImpl, UserServiceImpl: add control checks in list pagination methods, so user cannot put bad values
* UserController: fix UserDTO, not setting numberOfNotes, deleteUser() now returns proper responses if user wasn't found