@@ -3,6 +3,7 @@ package com.example.nms.controller;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -17,7 +18,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import com.example.nms.dto.NoteDTO;
 import com.example.nms.entity.Note;
-import com.example.nms.entity.User;
+import com.example.nms.exception.note.InvalidNoteException;
 import com.example.nms.exception.note.NoteNotFoundException;
 import com.example.nms.mapper.NoteMapper;
 import com.example.nms.service.auth.AuthService;
@@ -37,25 +38,28 @@ public class NoteController {
     private final AuthService authService;
     private final NoteDTOValidator noteDTOValidator;
 
+    private static final String NOTE_WAS_NOT_FOUND = "The note %s was not found";
+
     @GetMapping("/{title}")
     public ResponseEntity<NoteDTO> findByTitle(@PathVariable("title") String title) {
-
-        Note note = noteService.findByTitleAndUser(title, authService.getAuthenticatedUser())
-                .orElseThrow(() -> new NoteNotFoundException("Note with title '" + title + "' has not been found"));
-
-        return ResponseEntity.ok(noteMapper.toDTO(note));
+        return ResponseEntity.ok(
+                noteMapper.toDTO(
+                        noteService.findByTitleAndUser(title, authService.getAuthenticatedUser())
+                                .orElseThrow(
+                                        () -> new NoteNotFoundException(String.format(NOTE_WAS_NOT_FOUND, title)))));
     }
 
     @GetMapping
     public ResponseEntity<List<NoteDTO>> findAll(
             @RequestParam(name = "page", required = false, defaultValue = "0") int page,
-            @RequestParam(name = "size", required = false, defaultValue = "10") int size,
+            @RequestParam(name = "size", required = false, defaultValue = "20") int size,
             @RequestParam(name = "direction", required = false, defaultValue = "asc") String direction,
-            @RequestParam(name = "sort", required = false, defaultValue = "uuid") String sortBy) {
-        // TODO return user notes
-        User user = authService.getAuthenticatedUser();
+            @RequestParam(name = "sort", required = false, defaultValue = "updatedAt") String sortBy) {
 
-        throw new UnsupportedOperationException("Unimplemented method");
+        return ResponseEntity.ok(
+                noteMapper.toDTO(
+                        noteService.listNotesByUser(page, size, direction, sortBy, authService.getAuthenticatedUser())
+                                .toList()));
     }
 
     @PostMapping
@@ -63,42 +67,45 @@ public class NoteController {
 
         noteDTOValidator.validate(noteDTO, br);
         if (br.hasFieldErrors())
-            return ResponseEntity.badRequest().body(br.getFieldErrors().stream()
-                    .map(err -> err.getField() + " - " + err.getDefaultMessage()).collect(Collectors.toList()));
+            throw new InvalidNoteException(
+                    br.getFieldErrors().stream()
+                            .map(err -> err.getField() + " - " + err.getDefaultMessage())
+                            .collect(Collectors.toList())
+                            .toString());
 
-        Note note = new Note(noteDTO.getTitle(), authService.getAuthenticatedUser());
-        Note createdNote = noteService.save(note);
-
-        return ResponseEntity.ok(noteMapper.toDTO(createdNote));
+        return ResponseEntity.ok(
+                noteMapper.toDTO(
+                        noteService.save(
+                                new Note(noteDTO.getTitle(), authService.getAuthenticatedUser()))));
     }
 
-    // TODO test
     @PatchMapping("/{title}")
     public ResponseEntity<Object> updateNote(@PathVariable("title") String title,
             @RequestBody @Valid NoteDTO noteDTO, BindingResult br) {
 
-        User user = authService.getAuthenticatedUser();
-        Note existingNote = noteService.findByTitleAndUser(title, user)
-                .orElseThrow(() -> new NoteNotFoundException("Note with title '" + title + "' does not exists"));
+        Note existingNote = noteService.findByTitleAndUser(title, authService.getAuthenticatedUser())
+                .orElseThrow(() -> new NoteNotFoundException(
+                        String.format(NOTE_WAS_NOT_FOUND, title)));
 
         noteDTO.setUuid(existingNote.getUuid());
         noteDTOValidator.validate(noteDTO, br);
+
         if (br.hasFieldErrors())
-            return ResponseEntity.badRequest().body(
-                    br.getFieldErrors().stream().map(err -> err.getField() + " - " + err.getDefaultMessage())
-                            .toList());
+            throw new InvalidNoteException(
+                    br.getFieldErrors().stream()
+                            .map(err -> err.getField() + " - " + err.getDefaultMessage())
+                            .collect(Collectors.toList())
+                            .toString());
 
-        Note updatedNote = noteService.updateEntityFromDTO(existingNote.getUuid(), noteDTO);
-
-        return ResponseEntity.ok(noteMapper.toDTO(updatedNote));
+        return ResponseEntity.ok(
+                noteMapper.toDTO(
+                        noteService.updateEntityFromDTO(existingNote, noteDTO)));
     }
 
-    // TODO test
     @DeleteMapping("/{title}")
     public ResponseEntity<String> deleteNote(@PathVariable("title") String title) {
-        User user = authService.getAuthenticatedUser();
-        noteService.deleteByTitleAndOwner(title, user);
-        // todo check if deletion was successful
-        return ResponseEntity.ok("Note '" + title + "' has been successfully deleted");
+        return noteService.deleteByTitleAndOwner(title, authService.getAuthenticatedUser())
+                ? ResponseEntity.ok(String.format("The note %s was successfully deleted", title))
+                : ResponseEntity.status(HttpStatus.NOT_FOUND).body(String.format(NOTE_WAS_NOT_FOUND, title));
     }
 }
